# GameHub

./: .gitignore  .gitmodules  .travis.yml  INSTALL.md  README.md  appveyor.yml  meson.build  meson_options.txt  uncrustify.cfg
data/: GameHub.css  com.github.tkashkin.gamehub-overlayfs-helper  com.github.tkashkin.gamehub.appdata.xml.in  com.github.tkashkin.gamehub.changelog.xml  com.github.tkashkin.gamehub.changelog.xml.REMOVED.git-id  com.github.tkashkin.gamehub.desktop.in  com.github.tkashkin.gamehub.gresource.xml  com.github.tkashkin.gamehub.gschema.xml  com.github.tkashkin.gamehub.gschema.xml.in  com.github.tkashkin.gamehub.policy  com.github.tkashkin.gamehub.policy.in  gamehub.desktop  gamehub.gschema.xml.in  gamehub.metainfo.xml  gamehub.policy  meson.build
data/css/: app.css
data/css/themes/: elementary.css
data/icons/: icons.gresource.xml
data/screenshots/: 2.png.REMOVED.git-id  2_dark.png.REMOVED.git-id  3.png.REMOVED.git-id  3_dark.png.REMOVED.git-id  3_dialog.png.REMOVED.git-id  3_dialog_dark.png.REMOVED.git-id  3_library.png.REMOVED.git-id  4.png.REMOVED.git-id  4_dark.png.REMOVED.git-id
data/screenshots/dark/: details.png.REMOVED.git-id  details@2x.png.REMOVED.git-id  grid.png.REMOVED.git-id  grid@2x.png.REMOVED.git-id  grid_controller.png.REMOVED.git-id  grid_gamepad@2x.png.REMOVED.git-id  list.png.REMOVED.git-id  list@2x.png.REMOVED.git-id  properties.png.REMOVED.git-id  settings_collection.png.REMOVED.git-id  settings_collection@2x.png.REMOVED.git-id  settings_controller.png.REMOVED.git-id  welcome@2x.png.REMOVED.git-id
data/screenshots/light/: details.png.REMOVED.git-id  details@2x.png.REMOVED.git-id  grid.png.REMOVED.git-id  grid@2x.png.REMOVED.git-id  grid_controller.png.REMOVED.git-id  grid_gamepad@2x.png.REMOVED.git-id  install@2x.png.REMOVED.git-id  install_compat@2x.png.REMOVED.git-id  list.png.REMOVED.git-id  list@2x.png.REMOVED.git-id  overlays@2x.png.REMOVED.git-id  properties.png.REMOVED.git-id  properties@2x.png.REMOVED.git-id  settings_collection.png.REMOVED.git-id  settings_collection@2x.png.REMOVED.git-id  settings_controller.png.REMOVED.git-id  welcome@2x.png.REMOVED.git-id
data/share/compat/dosbox/: windowed.conf
data/share/tweaks/: amd.json  dxvk.json  gamemode.json  gpu_amd.json  gpu_nvidia.json  libstrangle.json  mangohud.json  mumble.json  proton.json  wine.json
data/share/tweaks/compat/: proton.json
data/share/tweaks/gpu/: nvidia.json
data/share/tweaks/overlays/: mangohud.json
data/share/tweaks/performance/: gamemode.json
data/share/tweaks/postprocessing/: vkbasalt.json
src/: ProjectConfig.vala.in  app.vala  launcher.sh.in  meson.build
src/config/: Config.vala  GitBranch.vala  GitCommit.vala  meson.build
src/data/: CompatTool.vala  Emulator.vala  Game.vala  GameSource.vala  GamesDB.vala  Platform.vala  Runnable.vala
src/data/adapters/: GamesAdapter.vala
src/data/compat/: AGS.vala  CompatTool.vala  CustomEmulator.vala  CustomScript.vala  DOSBox.vala  Innoextract.vala  Proton.vala  RetroArch.vala  ScummVM.vala  Wine.vala  WineWrap.vala
src/data/compat/tools/: CustomEmulator.vala  CustomScript.vala  DOSBox.vala  Innoextract.vala  RetroArch.vala  ScummVM.vala  SteamCompatTool.vala  Wine.vala  WineWrap.vala
src/data/db/: Database.vala  Table.vala
src/data/db/tables/: CompatTools.vala  Emulators.vala  Games.vala  IGDBData.vala  Merges.vala  Tags.vala
src/data/providers/: DataProvider.vala  ImagesProvider.vala  Provider.vala
src/data/providers/data/: IGDB.vala
src/data/providers/images/: JinxSGVI.vala  Steam.vala  SteamGridDB.vala
src/data/runnables/: Game.vala  Runnable.vala
src/data/runnables/traits/: HasActions.vala  HasExecutableFile.vala  SupportsCompatTools.vala
src/data/sources/epicgames/: EpicAnalysis.vala  EpicChunk.vala  EpicDownloader.vala  EpicGame.vala  EpicGames.vala  EpicGamesGame.vala  EpicGamesServices.vala  EpicInstaller.vala  EpicManifest.vala  EpicUtils.vala  LegendaryWrapper.vala
src/data/sources/gog/: GOG.vala  GOGGame.vala
src/data/sources/humble/: Humble.vala  HumbleGame.vala  Trove.vala
src/data/sources/itch/: ButlerClient.vala  ButlerConnection.vala  ButlerDaemon.vala  ButlerJsonrpcClient.vala  Itch.vala  ItchDownloader.vala  ItchGame.vala  Utils.vala
src/data/sources/steam/: Steam.vala  SteamCollectionDatabase.vala  SteamGame.vala
src/data/sources/user/: User.vala  UserGame.vala
src/data/tweaks/: ApplicabilityOptions.vala  Option.vala  Requirements.vala  Tweak.vala  TweakOptions.vala  TweakSet.vala
src/lib/ivy/: Extractor.vala  Frame.vala  Printer.vala  Stacktrace.vala
src/settings/: Auth.vala  Compat.vala  Controller.vala  Paths.vala  Providers.vala  SavedState.vala  Settings.vala  Tweaks.vala  UI.vala
src/ui/dialogs/: AboutDialog.vala  CompatRunDialog.vala  CorruptedInstallerDialog.vala  GOGGameInstallDialog.vala  GameDetailsDialog.vala  GameFSOverlaysDialog.vala  GameInstallDialog.vala  GamePropertiesDialog.vala  GameTweaksDialog.vala  ImportEmulatedGamesDialog.vala  InstallDialog.vala  ProtonRunDialog.vala  QuickErrorDialog.vala  SettingsDialog.vala
src/ui/dialogs/GamePropertiesDialog/: GamePropertiesDialog.vala
src/ui/views/: BaseView.vala  WelcomeView.vala
src/ui/views/GamesView/: GameCard.vala  (+7 more)
src/ui/widgets/: ActionButton.vala  AlertView.vala  AppIndicator.vala  AutoSizeImage.vala  CompatToolOptions.vala  CompatToolPicker.vala  DirectoriesList.vala  ExtendedStackSwitcher.vala  FileChooserEntry.vala  GameTagsList.vala  ImagesDownloadPopover.vala  ModeButton.vala  OverlayBar.vala  SettingsSidebar.vala  Styles.vala  TagRow.vala  TweaksList.vala  VariableEntry.vala  Welcome.vala
src/ui/windows/: GOGGameInstallWindow.vala  MainWindow.vala  WebAuthWindow.vala
src/utils/: BinaryVDF.vala  Downloader.vala  ExecTask.vala  FSOverlay.vala  FSUtils.vala  Gamepad.vala  ImageCache.vala  Inhibitor.vala  OS.vala  Parser.vala  RunError.vala  Settings.vala  SignalRateLimiter.vala  TypeUtils.vala  Utils.vala
src/utils/downloader/: Downloader.vala  EpicDownloader.vala  SoupDownloader.vala
src/utils/fs/: FS.vala  FSOverlay.vala
src/vapi/: leveldb.vapi
(+191 files in other folders)
