option('git_branch', type: 'string', value: '@GIT_BRANCH@')
option('git_commit', type: 'string', value: '@GIT_COMMIT@')
option('git_commit_short', type: 'string', value: '@GIT_COMMIT_SHORT@')

option('os', type: 'combo', choices: ['linux', 'windows', 'macos'], value: 'linux')
option('distro', type: 'combo', choices: ['generic', 'debian', 'arch'], value: 'generic')

option('appimage', type: 'boolean', value: false)
option('flatpak', type: 'boolean', value: false)
option('snap', type: 'boolean', value: false)

option('runtime', type: 'string', value: '')

option('use_libunity', type: 'boolean', value: false)

option('use_overlayfs', type: 'boolean', value: true)

option('use_images_memcache', type: 'boolean', value: true)
