option('git_branch', type: 'string', value: '')
option('git_commit', type: 'string', value: '')

option('flatpak', type: 'boolean', value: false)

option('overlayfs', type: 'feature', value: 'auto')

option('api_key_steam', type: 'string', value: '8B10B604CAC6AC90F57AACE025DD904C')
option('api_key_itch', type: 'string', value: '')
option('api_key_igdb', type: 'string', value: 'e0a54818580e4085b596c5aa613b1c53')
option('api_key_steamgriddb', type: 'string', value: '711485c5b6c9b8ca87f6052f6dda04e8')